fix center alignment on program

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .text-container {
-  width: 95%;
+  width: 90%;
   height: auto;
   margin: auto;
   margin-bottom: 30px;
@@ -20,9 +20,9 @@
   /*text-align: left;*/
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
   .text-container {
-    width: 50%;
+    width: 70%;
   }
 }
 
