--- a/src/components/Program/Program.css
+++ b/src/components/Program/Program.css
@@ -7,6 +7,6 @@ p .activity{
     font-family: "Amatic SC";
 }
 
-.program {
-
+p .sat {
+    text-align: center;
 }
